[package]
name = "widgets"
version = "0.1.0"
authors = ["Erich Heine <sophacles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
bounded-vec-deque = "0.1.1"
time = { version="0.3.11", features = ["local-offset", "macros"] }

[dev-dependencies]
crossterm = "0.23.2"
