[package]
name = "extra-widgets"
version = "0.1.0"
authors = ["Erich Heine <sophacles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
bounded-vec-deque = { version ="0.1.1", optional = true}
time = { version="0.3.11", features = ["local-offset", "macros"] , optional = true}

[dev-dependencies]
crossterm = "0.23.2"

[features]
default = ["separated_list", "calendar", "text_macros"]
separated_list = ["dep:bounded-vec-deque"]
calendar = ["dep:time"]
text_macros = []
